# zp

./: LICENSE  README.md  pyproject.toml
src/: main.py  zellij.py
